// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ListItem /> should render its css w/ props bgColor 1`] = `
.c0 {
  position: relative;
  color: rgb(51,51,51);
  border-bottom: 1px solid rgb(231,236,236);
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  background-color: green;
  -webkit-user-drag: none;
  -moz-user-drag: none;
  -ms-user-drag: none;
  user-drag: none;
  overflow: hidden;
}

.c0:first-child,
.c0:first-of-type {
  border-top-left-radius: 6px;
  border-top-right-radius: 6px;
}

.c0:last-child {
  border-bottom: none;
  margin-bottom: 10px;
  border-bottom-left-radius: 6px;
  border-bottom-right-radius: 6px;
}

@media print {
  .c0 {
    border: none;
  }
}

<FlexBox
  bgColor="green"
  className="c0"
  theme={
    Object {
      "brand": "#000",
      "pale": "#ccc",
      "radius": Object {
        "general": "6px",
      },
    }
  }
/>
`;

exports[`<ListItem /> should render its css w/ props color 1`] = `
.c0 {
  position: relative;
  color: red;
  border-bottom: 1px solid rgb(231,236,236);
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  background-color: rgb(255,255,255);
  -webkit-user-drag: none;
  -moz-user-drag: none;
  -ms-user-drag: none;
  user-drag: none;
  overflow: hidden;
}

.c0:first-child,
.c0:first-of-type {
  border-top-left-radius: 6px;
  border-top-right-radius: 6px;
}

.c0:last-child {
  border-bottom: none;
  margin-bottom: 10px;
  border-bottom-left-radius: 6px;
  border-bottom-right-radius: 6px;
}

@media print {
  .c0 {
    border: none;
  }
}

<FlexBox
  className="c0"
  color="red"
  theme={
    Object {
      "brand": "#000",
      "pale": "#ccc",
      "radius": Object {
        "general": "6px",
      },
    }
  }
/>
`;

exports[`<ListItem /> should render its css w/ props first 1`] = `
.c0 {
  position: relative;
  color: rgb(51,51,51);
  border-bottom: 1px solid rgb(231,236,236);
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  background-color: rgb(255,255,255);
  -webkit-user-drag: none;
  -moz-user-drag: none;
  -ms-user-drag: none;
  user-drag: none;
  overflow: hidden;
  background-color: #ccc;
  border-bottom-color: #bfbfbf;
}

.c0:first-child,
.c0:first-of-type {
  border-top-left-radius: 6px;
  border-top-right-radius: 6px;
}

.c0:last-child {
  border-bottom: none;
  margin-bottom: 10px;
  border-bottom-left-radius: 6px;
  border-bottom-right-radius: 6px;
}

@media print {
  .c0 {
    border: none;
  }
}

<FlexBox
  className="c0"
  first={true}
  theme={
    Object {
      "brand": "#000",
      "pale": "#ccc",
      "radius": Object {
        "general": "6px",
      },
    }
  }
/>
`;

exports[`<ListItem /> should render its css w/ props isSelected 1`] = `
.c0 {
  position: relative;
  color: rgb(51,51,51);
  border-bottom: 1px solid rgb(231,236,236);
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  background-color: rgb(255,255,255);
  -webkit-user-drag: none;
  -moz-user-drag: none;
  -ms-user-drag: none;
  user-drag: none;
  overflow: hidden;
}

.c0:first-child,
.c0:first-of-type {
  border-top-left-radius: 6px;
  border-top-right-radius: 6px;
}

.c0:last-child {
  border-bottom: none;
  margin-bottom: 10px;
  border-bottom-left-radius: 6px;
  border-bottom-right-radius: 6px;
}

.c0:after {
  content: "";
  display: inline-block;
  position: absolute;
  top: 0;
  right: 0;
  width: 0;
  height: 0;
  border-style: solid;
  border-width: 0 30px 30px 0;
  border-color: transparent rgb(153,226,17) transparent transparent;
}

@media print {
  .c0 {
    border: none;
  }
}

<FlexBox
  className="c0"
  isSelected={true}
  theme={
    Object {
      "brand": "#000",
      "pale": "#ccc",
      "radius": Object {
        "general": "6px",
      },
    }
  }
/>
`;

exports[`<ListItem /> should render its css w/ props justifyContent 1`] = `
.c0 {
  position: relative;
  color: rgb(51,51,51);
  border-bottom: 1px solid rgb(231,236,236);
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  background-color: rgb(255,255,255);
  -webkit-user-drag: none;
  -moz-user-drag: none;
  -ms-user-drag: none;
  user-drag: none;
  overflow: hidden;
}

.c0:first-child,
.c0:first-of-type {
  border-top-left-radius: 6px;
  border-top-right-radius: 6px;
}

.c0:last-child {
  border-bottom: none;
  margin-bottom: 10px;
  border-bottom-left-radius: 6px;
  border-bottom-right-radius: 6px;
}

@media print {
  .c0 {
    border: none;
  }
}

<FlexBox
  className="c0"
  justifyContent="center"
  theme={
    Object {
      "brand": "#000",
      "pale": "#ccc",
      "radius": Object {
        "general": "6px",
      },
    }
  }
/>
`;

exports[`<ListItem /> should render its css w/ props locked 1`] = `
.c0 {
  position: relative;
  color: rgb(51,51,51);
  border-bottom: 1px solid rgb(231,236,236);
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  background-color: rgb(255,255,255);
  -webkit-user-drag: none;
  -moz-user-drag: none;
  -ms-user-drag: none;
  user-drag: none;
  overflow: hidden;
}

.c0:first-child,
.c0:first-of-type {
  border-top-left-radius: 6px;
  border-top-right-radius: 6px;
}

.c0:last-child {
  border-bottom: none;
  margin-bottom: 10px;
  border-bottom-left-radius: 6px;
  border-bottom-right-radius: 6px;
}

@media print {
  .c0 {
    border: none;
  }
}

<FlexBox
  className="c0"
  locked={true}
  theme={
    Object {
      "brand": "#000",
      "pale": "#ccc",
      "radius": Object {
        "general": "6px",
      },
    }
  }
/>
`;

exports[`<ListItem /> should render its css w/ props unit 1`] = `
.c0 {
  position: relative;
  color: rgb(51,51,51);
  border-bottom: 1px solid rgb(231,236,236);
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  background-color: rgb(255,255,255);
  -webkit-user-drag: none;
  -moz-user-drag: none;
  -ms-user-drag: none;
  user-drag: none;
  overflow: hidden;
}

.c0:first-child,
.c0:first-of-type {
  border-top-left-radius: 6px;
  border-top-right-radius: 6px;
}

.c0:last-child {
  border-bottom: none;
  margin-bottom: 10px;
  border-bottom-left-radius: 6px;
  border-bottom-right-radius: 6px;
}

@media print {
  .c0 {
    border: none;
  }
}

<FlexBox
  className="c0"
  theme={
    Object {
      "brand": "#000",
      "pale": "#ccc",
      "radius": Object {
        "general": "6px",
      },
    }
  }
  unit={true}
/>
`;

exports[`<ListItemText /> should render a FlexChild 1`] = `
.c0 {
  padding: 22px 16px;
}

<FlexBox__FlexChild
  className="c0"
/>
`;

exports[`<ListItemText /> should render its css w/ props locked 1`] = `
.c0 {
  padding: 22px 16px;
  color: rgb(209,209,209);
  cursor: default;
  pointer-events: none;
}

<FlexBox__FlexChild
  className="c0"
  locked={true}
/>
`;

exports[`<ListItemText /> should render its css w/ props padding 1`] = `
.c0 {
  padding: 22px 16px;
}

<FlexBox__FlexChild
  className="c0"
  padding="60px"
/>
`;

exports[`<ListItemText /> should render its css w/ props unit 1`] = `
.c0 {
  padding: 16px;
}

<FlexBox__FlexChild
  className="c0"
  unit={true}
/>
`;

exports[`<ListLink /> should render its css w/ props color 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  color: red;
  border-bottom: 1px solid rgb(231,236,236);
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  background-color: rgb(255,255,255);
  -webkit-user-drag: none;
  -moz-user-drag: none;
  -ms-user-drag: none;
  user-drag: none;
  overflow: hidden;
}

.c0:first-child,
.c0:first-of-type {
  border-top-left-radius: 6px;
  border-top-right-radius: 6px;
}

.c0:last-child {
  border-bottom: none;
  margin-bottom: 10px;
  border-bottom-left-radius: 6px;
  border-bottom-right-radius: 6px;
}

.c0:active {
  background-color: #e6e6e6;
}

@media print {
  .c0 {
    border: none;
  }
}

@media (min-width:41.75em) {
  .c0:hover {
    color: red;
  }
}

<ClearLink
  className="c0"
  color="red"
  theme={
    Object {
      "brand": "#000",
      "pale": "#ccc",
      "radius": Object {
        "general": "6px",
      },
    }
  }
  to="/#"
/>
`;

exports[`<ListLink /> should render its css w/ props hoverBgColor 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  color: rgb(51,51,51);
  border-bottom: 1px solid rgb(231,236,236);
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  background-color: rgb(255,255,255);
  -webkit-user-drag: none;
  -moz-user-drag: none;
  -ms-user-drag: none;
  user-drag: none;
  overflow: hidden;
}

.c0:first-child,
.c0:first-of-type {
  border-top-left-radius: 6px;
  border-top-right-radius: 6px;
}

.c0:last-child {
  border-bottom: none;
  margin-bottom: 10px;
  border-bottom-left-radius: 6px;
  border-bottom-right-radius: 6px;
}

.c0:active {
  background-color: green;
}

@media print {
  .c0 {
    border: none;
  }
}

@media (min-width:41.75em) {
  .c0:hover {
    color: #000;
  }
}

<ClearLink
  className="c0"
  hoverBgColor="green"
  theme={
    Object {
      "brand": "#000",
      "pale": "#ccc",
      "radius": Object {
        "general": "6px",
      },
    }
  }
  to="/#"
/>
`;

exports[`<ListPanelHeader /> should render its css w/ props theme 1`] = `
.c0 {
  position: relative;
  width: 100%;
  margin: 0;
  padding: 40px 0 20px;
  color: #000;
  font-weight: normal;
  text-align: center;
}

<h2
  className="c0"
/>
`;

exports[`<ListPanelHeader /> should render its css w/ props uppercase 1`] = `
.c0 {
  position: relative;
  width: 100%;
  margin: 0;
  padding: 40px 0 20px;
  color: #00BBEF;
  font-weight: normal;
  text-align: center;
  text-transform: uppercase;
}

<h2
  className="c0"
/>
`;
